fix: user entity to authenticate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 # configure your datasource
+quarkus.http.auth.basic=true
+%test.quarkus.http.auth.basic=true.
 quarkus.datasource.db-kind = mysql
 # quarkus.datasource.username = root
 # quarkus.datasource.password = 123
